tests/reject/char_as_type.ty
# there is no `char` type keyword -- char arises by inference, never as a written type
fn main():
    c: char = 97
    println(str(c))
